// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click to show new node class editor 1`] = `
<div
  className="petc-controls"
  id="petc-node-select-control"
>
  <ul>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node default react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        default
      </div>
    </li>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node class-red react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "red",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        class-red
      </div>
    </li>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node class-blue react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "blue",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        class-blue
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
      <br />
       style 
    </li>
  </ul>
  <div
    className="petc-modal-overlay"
    onClick={[Function]}
  >
    <div
      className="petc-modal petc-json-editor"
      onClick={[Function]}
      style={
        Object {
          "left": "10%",
          "top": "10%",
        }
      }
    >
      <div
        className="petc-json-editor-name"
      >
        name:
        <input
          onChange={[Function]}
          style={null}
          type="text"
        />
      </div>
      <div
        tabIndex="1"
      >
        <div
          className="react-json-view"
          style={
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0)",
              "cursor": "default",
              "fontFamily": null,
              "position": "relative",
            }
          }
        >
          <div
            className="pretty-json-container object-container"
          >
            <div
              className="object-content"
            >
              <div
                className="object-key-val"
              >
                <span>
                  <span
                    onClick={[Function]}
                    style={
                      Object {
                        "cursor": "pointer",
                        "display": "inline-block",
                      }
                    }
                  >
                    <div
                      className="icon-container"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "17px",
                        }
                      }
                    >
                      <span
                        className="expanded-icon"
                      >
                        <svg
                          fill="currentColor"
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "color": "#586e75",
                              "height": "1em",
                              "verticalAlign": "middle",
                              "width": "1em",
                            }
                          }
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7,13H17V11H7"
                          />
                        </svg>
                      </span>
                    </div>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#002b36",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontWeight": "bold",
                        }
                      }
                    >
                      {
                    </span>
                  </span>
                  <div
                    className="object-meta-data"
                    onClick={[Function]}
                    style={
                      Object {
                        "display": "inline-block",
                        "padding": "0px 0px 0px 10px",
                      }
                    }
                  >
                    <span
                      className="click-to-add"
                      style={
                        Object {
                          "verticalAlign": "top",
                        }
                      }
                    >
                      <span
                        className="click-to-add-icon"
                        onClick={[Function]}
                      >
                        <svg
                          fill="currentColor"
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "color": "#2aa198",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontSize": "15px",
                              "height": "1em",
                              "marginRight": "3px",
                              "verticalAlign": "top",
                              "width": "1em",
                            }
                          }
                          viewBox="0 0 40 40"
                        >
                          <g>
                            <path
                              d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </div>
                </span>
                <div
                  className="pushed-content object-container"
                >
                  <div
                    className="object-content"
                    style={
                      Object {
                        "marginLeft": "6px",
                      }
                    }
                  >
                    <div
                      className="variable-row"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          className="object-key"
                          style={
                            Object {
                              ":hover": Object {
                                "opacity": "1",
                              },
                              "color": "#002b36",
                              "display": "inline-block",
                              "fontStyle": "none",
                              "letterSpacing": "0.5px",
                              "opacity": "0.85",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            borderRadius
                          </span>
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "display": "inline-block",
                              "margin": "0px 5px",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          :
                        </span>
                      </span>
                      <div
                        className="variable-value"
                        onClick={[Function]}
                        style={
                          Object {
                            "cursor": "default",
                            "display": "inline-block",
                            "paddingRight": "6px",
                            "position": "relative",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "color": "#cb4b16",
                              "display": "inline-block",
                            }
                          }
                        >
                          <span
                            className="string-value"
                            onClick={[Function]}
                            style={
                              Object {
                                "cursor": "default",
                              }
                            }
                          >
                            "
                            20px
                            "
                          </span>
                        </div>
                      </div>
                      <div
                        className="click-to-edit"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-edit-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#2aa198",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m19.8 26.4l2.6-2.6-3.4-3.4-2.6 2.6v1.3h2.2v2.1h1.2z m9.8-16q-0.3-0.4-0.7 0l-7.8 7.8q-0.4 0.4 0 0.7t0.7 0l7.8-7.8q0.4-0.4 0-0.7z m1.8 13.2v4.3q0 2.6-1.9 4.5t-4.5 1.9h-18.6q-2.6 0-4.5-1.9t-1.9-4.5v-18.6q0-2.7 1.9-4.6t4.5-1.8h18.6q1.4 0 2.6 0.5 0.3 0.2 0.4 0.5 0.1 0.4-0.2 0.7l-1.1 1.1q-0.3 0.3-0.7 0.1-0.5-0.1-1-0.1h-18.6q-1.4 0-2.5 1.1t-1 2.5v18.6q0 1.4 1 2.5t2.5 1h18.6q1.5 0 2.5-1t1.1-2.5v-2.9q0-0.2 0.2-0.4l1.4-1.5q0.3-0.3 0.8-0.1t0.4 0.6z m-2.1-16.5l6.4 6.5-15 15h-6.4v-6.5z m9.9 3l-2.1 2-6.4-6.4 2.1-2q0.6-0.7 1.5-0.7t1.5 0.7l3.4 3.4q0.6 0.6 0.6 1.5t-0.6 1.5z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                      <div
                        className="click-to-remove"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-remove-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#cb4b16",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      className="variable-row"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          className="object-key"
                          style={
                            Object {
                              ":hover": Object {
                                "opacity": "1",
                              },
                              "color": "#002b36",
                              "display": "inline-block",
                              "fontStyle": "none",
                              "letterSpacing": "0.5px",
                              "opacity": "0.85",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            borderWidth
                          </span>
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "display": "inline-block",
                              "margin": "0px 5px",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          :
                        </span>
                      </span>
                      <div
                        className="variable-value"
                        onClick={[Function]}
                        style={
                          Object {
                            "cursor": "default",
                            "display": "inline-block",
                            "paddingRight": "6px",
                            "position": "relative",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "color": "#cb4b16",
                              "display": "inline-block",
                            }
                          }
                        >
                          <span
                            className="string-value"
                            onClick={[Function]}
                            style={
                              Object {
                                "cursor": "default",
                              }
                            }
                          >
                            "
                            10px
                            "
                          </span>
                        </div>
                      </div>
                      <div
                        className="click-to-edit"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-edit-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#2aa198",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m19.8 26.4l2.6-2.6-3.4-3.4-2.6 2.6v1.3h2.2v2.1h1.2z m9.8-16q-0.3-0.4-0.7 0l-7.8 7.8q-0.4 0.4 0 0.7t0.7 0l7.8-7.8q0.4-0.4 0-0.7z m1.8 13.2v4.3q0 2.6-1.9 4.5t-4.5 1.9h-18.6q-2.6 0-4.5-1.9t-1.9-4.5v-18.6q0-2.7 1.9-4.6t4.5-1.8h18.6q1.4 0 2.6 0.5 0.3 0.2 0.4 0.5 0.1 0.4-0.2 0.7l-1.1 1.1q-0.3 0.3-0.7 0.1-0.5-0.1-1-0.1h-18.6q-1.4 0-2.5 1.1t-1 2.5v18.6q0 1.4 1 2.5t2.5 1h18.6q1.5 0 2.5-1t1.1-2.5v-2.9q0-0.2 0.2-0.4l1.4-1.5q0.3-0.3 0.8-0.1t0.4 0.6z m-2.1-16.5l6.4 6.5-15 15h-6.4v-6.5z m9.9 3l-2.1 2-6.4-6.4 2.1-2q0.6-0.7 1.5-0.7t1.5 0.7l3.4 3.4q0.6 0.6 0.6 1.5t-0.6 1.5z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                      <div
                        className="click-to-remove"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-remove-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#cb4b16",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      className="variable-row"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          className="object-key"
                          style={
                            Object {
                              ":hover": Object {
                                "opacity": "1",
                              },
                              "color": "#002b36",
                              "display": "inline-block",
                              "fontStyle": "none",
                              "letterSpacing": "0.5px",
                              "opacity": "0.85",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            borderColor
                          </span>
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "display": "inline-block",
                              "margin": "0px 5px",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          :
                        </span>
                      </span>
                      <div
                        className="variable-value"
                        onClick={[Function]}
                        style={
                          Object {
                            "cursor": "default",
                            "display": "inline-block",
                            "paddingRight": "6px",
                            "position": "relative",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "color": "#cb4b16",
                              "display": "inline-block",
                            }
                          }
                        >
                          <span
                            className="string-value"
                            onClick={[Function]}
                            style={
                              Object {
                                "cursor": "default",
                              }
                            }
                          >
                            "
                            grey
                            "
                          </span>
                        </div>
                      </div>
                      <div
                        className="click-to-edit"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-edit-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#2aa198",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m19.8 26.4l2.6-2.6-3.4-3.4-2.6 2.6v1.3h2.2v2.1h1.2z m9.8-16q-0.3-0.4-0.7 0l-7.8 7.8q-0.4 0.4 0 0.7t0.7 0l7.8-7.8q0.4-0.4 0-0.7z m1.8 13.2v4.3q0 2.6-1.9 4.5t-4.5 1.9h-18.6q-2.6 0-4.5-1.9t-1.9-4.5v-18.6q0-2.7 1.9-4.6t4.5-1.8h18.6q1.4 0 2.6 0.5 0.3 0.2 0.4 0.5 0.1 0.4-0.2 0.7l-1.1 1.1q-0.3 0.3-0.7 0.1-0.5-0.1-1-0.1h-18.6q-1.4 0-2.5 1.1t-1 2.5v18.6q0 1.4 1 2.5t2.5 1h18.6q1.5 0 2.5-1t1.1-2.5v-2.9q0-0.2 0.2-0.4l1.4-1.5q0.3-0.3 0.8-0.1t0.4 0.6z m-2.1-16.5l6.4 6.5-15 15h-6.4v-6.5z m9.9 3l-2.1 2-6.4-6.4 2.1-2q0.6-0.7 1.5-0.7t1.5 0.7l3.4 3.4q0.6 0.6 0.6 1.5t-0.6 1.5z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                      <div
                        className="click-to-remove"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-remove-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#cb4b16",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      className="variable-row"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          className="object-key"
                          style={
                            Object {
                              ":hover": Object {
                                "opacity": "1",
                              },
                              "color": "#002b36",
                              "display": "inline-block",
                              "fontStyle": "none",
                              "letterSpacing": "0.5px",
                              "opacity": "0.85",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            height
                          </span>
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "display": "inline-block",
                              "margin": "0px 5px",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          :
                        </span>
                      </span>
                      <div
                        className="variable-value"
                        onClick={[Function]}
                        style={
                          Object {
                            "cursor": "default",
                            "display": "inline-block",
                            "paddingRight": "6px",
                            "position": "relative",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "color": "#cb4b16",
                              "display": "inline-block",
                            }
                          }
                        >
                          <span
                            className="string-value"
                            onClick={[Function]}
                            style={
                              Object {
                                "cursor": "default",
                              }
                            }
                          >
                            "
                            32px
                            "
                          </span>
                        </div>
                      </div>
                      <div
                        className="click-to-edit"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-edit-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#2aa198",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m19.8 26.4l2.6-2.6-3.4-3.4-2.6 2.6v1.3h2.2v2.1h1.2z m9.8-16q-0.3-0.4-0.7 0l-7.8 7.8q-0.4 0.4 0 0.7t0.7 0l7.8-7.8q0.4-0.4 0-0.7z m1.8 13.2v4.3q0 2.6-1.9 4.5t-4.5 1.9h-18.6q-2.6 0-4.5-1.9t-1.9-4.5v-18.6q0-2.7 1.9-4.6t4.5-1.8h18.6q1.4 0 2.6 0.5 0.3 0.2 0.4 0.5 0.1 0.4-0.2 0.7l-1.1 1.1q-0.3 0.3-0.7 0.1-0.5-0.1-1-0.1h-18.6q-1.4 0-2.5 1.1t-1 2.5v18.6q0 1.4 1 2.5t2.5 1h18.6q1.5 0 2.5-1t1.1-2.5v-2.9q0-0.2 0.2-0.4l1.4-1.5q0.3-0.3 0.8-0.1t0.4 0.6z m-2.1-16.5l6.4 6.5-15 15h-6.4v-6.5z m9.9 3l-2.1 2-6.4-6.4 2.1-2q0.6-0.7 1.5-0.7t1.5 0.7l3.4 3.4q0.6 0.6 0.6 1.5t-0.6 1.5z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                      <div
                        className="click-to-remove"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-remove-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#cb4b16",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      className="variable-row"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          className="object-key"
                          style={
                            Object {
                              ":hover": Object {
                                "opacity": "1",
                              },
                              "color": "#002b36",
                              "display": "inline-block",
                              "fontStyle": "none",
                              "letterSpacing": "0.5px",
                              "opacity": "0.85",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            width
                          </span>
                          <span
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            "
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "display": "inline-block",
                              "margin": "0px 5px",
                              "verticalAlign": "top",
                            }
                          }
                        >
                          :
                        </span>
                      </span>
                      <div
                        className="variable-value"
                        onClick={[Function]}
                        style={
                          Object {
                            "cursor": "default",
                            "display": "inline-block",
                            "paddingRight": "6px",
                            "position": "relative",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "color": "#cb4b16",
                              "display": "inline-block",
                            }
                          }
                        >
                          <span
                            className="string-value"
                            onClick={[Function]}
                            style={
                              Object {
                                "cursor": "default",
                              }
                            }
                          >
                            "
                            32px
                            "
                          </span>
                        </div>
                      </div>
                      <div
                        className="click-to-edit"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-edit-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#2aa198",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m19.8 26.4l2.6-2.6-3.4-3.4-2.6 2.6v1.3h2.2v2.1h1.2z m9.8-16q-0.3-0.4-0.7 0l-7.8 7.8q-0.4 0.4 0 0.7t0.7 0l7.8-7.8q0.4-0.4 0-0.7z m1.8 13.2v4.3q0 2.6-1.9 4.5t-4.5 1.9h-18.6q-2.6 0-4.5-1.9t-1.9-4.5v-18.6q0-2.7 1.9-4.6t4.5-1.8h18.6q1.4 0 2.6 0.5 0.3 0.2 0.4 0.5 0.1 0.4-0.2 0.7l-1.1 1.1q-0.3 0.3-0.7 0.1-0.5-0.1-1-0.1h-18.6q-1.4 0-2.5 1.1t-1 2.5v18.6q0 1.4 1 2.5t2.5 1h18.6q1.5 0 2.5-1t1.1-2.5v-2.9q0-0.2 0.2-0.4l1.4-1.5q0.3-0.3 0.8-0.1t0.4 0.6z m-2.1-16.5l6.4 6.5-15 15h-6.4v-6.5z m9.9 3l-2.1 2-6.4-6.4 2.1-2q0.6-0.7 1.5-0.7t1.5 0.7l3.4 3.4q0.6 0.6 0.6 1.5t-0.6 1.5z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                      <div
                        className="click-to-remove"
                        style={
                          Object {
                            "verticalAlign": "top",
                          }
                        }
                      >
                        <span
                          className="click-to-remove-icon"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            preserveAspectRatio="xMidYMid meet"
                            style={
                              Object {
                                "color": "#cb4b16",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontSize": "15px",
                                "height": "1em",
                                "marginRight": "3px",
                                "verticalAlign": "top",
                                "width": "1em",
                              }
                            }
                            viewBox="0 0 40 40"
                          >
                            <g>
                              <path
                                d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  className="brace-row"
                >
                  <span
                    style={
                      Object {
                        "color": "#002b36",
                        "cursor": "pointer",
                        "display": "inline-block",
                        "fontWeight": "bold",
                        "paddingLeft": "3px",
                      }
                    }
                  >
                    }
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          apply
        </button>
        <button
          onClick={[Function]}
        >
          cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`click to show new node class editor 2`] = `
<div
  className="petc-controls"
  id="petc-node-select-control"
>
  <ul>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node default react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        default
      </div>
    </li>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node class-red react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "red",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        class-red
      </div>
    </li>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node class-blue react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "blue",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        class-blue
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
      <br />
       style 
    </li>
  </ul>
</div>
`;

exports[`shows custom node styles 1`] = `
<div
  className="petc-controls"
  id="petc-node-select-control"
>
  <ul>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node default react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        default
      </div>
    </li>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node class-red react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "red",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        class-red
      </div>
    </li>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node class-blue react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "blue",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        class-blue
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
      <br />
       style 
    </li>
  </ul>
</div>
`;

exports[`visible when node view mode 1`] = `
<div
  className="petc-controls"
  id="petc-node-select-control"
>
  <ul>
    <li
      className={null}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="petc-node default react-draggable"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      />
      <div>
        default
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
      <br />
       style 
    </li>
  </ul>
</div>
`;
